--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "scripts": {
         "nodemon": "nodemon ./server.js",
         "tailwind": "npx tailwindcss -i ./view/assets/styles/globals.css -o ./view/assets/styles/main.css",
-        "dev": "npm run tailwind && npm run nodemon",
-        "dev:yarn": "yarn run tailwind && yarn run nodemon",
-        "dev:pn": "pn tailwind && pn nodemon"
+        "dev": "npm run tailwind && npm run nodemon"
     },
     "dependencies": {
         "axios": "^1.7.2",
