--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cit-boilerplate",
   "author": "João Vitor Barbosa Zorzetti",
   "description": "Estrutura padrão de projeto",
-  "version": "2.0.0-alpha",
+  "version": "2.0.1-alpha",
   "main": "./server.js",
   "license": "MIT",
   "scripts": {
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.23.0",
     "postcss": "^8.4.40",
+    "postcss-nested": "^6.2.0",
     "postcss-preset-env": "^9.6.0",
     "tailwindcss": "^3.4.7"
   }
