--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cit-boilerplate",
   "author": "João Vitor Barbosa Zorzetti",
   "description": "Estrutura padrão de projeto",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "main": "./server.js",
   "license": "MIT",
   "scripts": {
@@ -21,6 +21,8 @@
     "postcss": "^8.4.40",
     "postcss-cli": "^11.0.0",
     "postcss-load-config": "^6.0.1",
+    "postcss-nested": "^6.2.0",
     "tailwindcss": "^3.4.7"
   }
 }
+
