--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "cit-boilerplate",
   "author": "João Vitor Barbosa Zorzetti",
   "description": "Estrutura padrão de projeto",
-  "version": "2.1.0-alpha",
+  "version": "2.2.0-alpha",
   "main": "./server.js",
   "license": "MIT",
   "scripts": {
     "nodemon": "nodemon ./server.js",
-    "tailwind": "npx tailwindcss -i ./view/assets/styles/globals.css -o ./view/assets/styles/main.css",
+    "tailwind": "npx tailwindcss -i ./view/assets/styles/globals.css -o ./view/assets/styles/tw-globals.css",
     "dev": "npm run tailwind && npm run nodemon",
     "build": "node ./esbuild.config.mjs"
   },
@@ -19,10 +19,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.4",
     "esbuild": "^0.23.0",
     "postcss": "^8.4.40",
+    "postcss-modules": "^6.0.0",
     "postcss-nested": "^6.2.0",
     "postcss-preset-env": "^9.6.0",
+    "posthtml": "^0.16.6",
+    "posthtml-css-modules": "^0.1.3",
     "tailwindcss": "^3.4.7"
   }
 }
