--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cit-boilerplate",
   "author": "João Vitor Barbosa Zorzetti",
   "description": "Estrutura padrão de projeto",
-  "version": "2.2.0-alpha",
+  "version": "2.2.1-alpha",
   "main": "./server.js",
   "license": "MIT",
   "scripts": {
@@ -28,5 +28,16 @@
     "posthtml": "^0.16.6",
     "posthtml-css-modules": "^0.1.3",
     "tailwindcss": "^3.4.7"
+  },
+  "pnpm": {
+    "overrides": {
+      "axios@>=1.3.2 <=1.7.3": ">=1.7.4",
+      "micromatch@<4.0.8": ">=4.0.8",
+      "body-parser@<1.20.3": ">=1.20.3",
+      "send@<0.19.0": ">=0.19.0",
+      "serve-static@<1.16.0": ">=1.16.0",
+      "express@<4.20.0": ">=4.20.0",
+      "path-to-regexp@<0.1.10": ">=0.1.10"
+    }
   }
 }
