--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-nested": "^6.2.0",
     "postcss-preset-env": "^9.6.0",
     "posthtml": "^0.16.6",
+    "posthtml-beautify": "^0.7.0",
     "posthtml-css-modules": "^0.1.3",
     "tailwindcss": "^3.4.7"
   },
